--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Virtualenv as created in Makefile
+ve/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -62,7 +65,7 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+docs/build/
 
 # PyBuilder
 target/
