--- a/.gitignore
+++ b/.gitignore
@@ -100,5 +100,14 @@ ENV/
 # mkdocs documentation
 /site
 
+# PyCharm IDE
+.idea/
+
 # mypy
 .mypy_cache/
+
+# Prism mocking tool
+prism
+
+# Diagram binaries
+diagrams/*.png
