--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,13 +51,14 @@ services:
     volumes:
       - ../core-management-layer:/code
     ports:
-      - "8001:5000"
+      - "8001:8080"
     depends_on:
       - core-access-control
       - core-user-data-store
       # - core-authentication-service
     restart: on-failure
-    command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/management_layer.yml -p 5000
+    # For mocking:
+    # command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/management_layer.yml -p 8080
 
 #  core-management-portal:
 #    build:
