--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,100 +1,52 @@
 version: '3'
 
 services:
-  core-general:
-    image: girleffect:1.0
-    build:
-      context: .
+    core-general:
+        image: girleffect:1.0
+        build:
+            context: .
 
-  core-authentication-service:
-    image: ge-auth:0.1
-    build:
-      context: ../core-authentication-service/
-      # Required to poll the postgres instance for local development.
-      # NOTE: Currently installation fails. Up to current user to just restart
-      # the django container at this stage, troubleshooting was burning too
-      # much of current ticket's time.
-      #args:
-      #  - EXTRA_DEPS=postgresql-client-9.4
-    volumes:
-      - ../core-authentication-service:/code
-    command: scripts/waitFor.sh scripts/startDjango.sh
-    ports:
-      - "8000:8000"
-    environment:
-      # DB_NAME currently makes use of default postgres db, new dbs will need
-      # to be created as we require more of them.
-      - DB_HOST=db
-      - DB_NAME=postgres
-    depends_on:
-      - db
+    core-authentication-service:
+        image: ge-auth:0.1
+        build:
+            context: ../core-authentication-service/
+        volumes:
+            - ../core-authentication-service:/code
+        command: scripts/waitFor.sh scripts/startDjango.sh
+        ports:
+            - "8000:8000"
+        environment:
+            - DB_HOST=db
+            # NOTE: we bootstrap our database container with some dbs.
+            - DB_NAME=authservice
+        depends_on:
+            - db
 
-  db:
-    image: postgres
+    wagtail-demo-1:
+        image: wtd_1:0.1
+        build:
+            context: apps/wagtail_client/
+        command: scripts/waitFor.sh scripts/startDjango.sh
+        ports:
+            - "8001:8001"
+        environment:
+            - DB_HOST=db
+            - DB_NAME=wagtail_1
+            - WAGTAIL_SITE_NAME=wagtail_1_demo
+            - OIDC_RP_CLIENT_ID=asdasdasd
+            - OIDC_RP_CLIENT_SECRET=asdasd
+            - OIDC_OP_AUTHORIZATION_ENDPOINT=asdasd
+            - OIDC_OP_TOKEN_ENDPOINT=asdasd
+            - OIDC_OP_USER_ENDPOINT=asdasd
+        depends_on:
+            - db
+            - core-authentication-service
 
-  core-user-data-store:
-    build:
-      context: ../core-user-data-store/
-      args:  # Maps to args defined in the Dockerfile
-        - password=secret
-        - dbkey  # Get value from the compose environment
-    volumes:
-      - ../core-user-data-store:/code
-    expose:
-        - "5000"
-#    healthcheck:
-#      test: ["CMD", "curl", "-f", "http://localhost:5000"]
-#      interval: 1m30s
-#      timeout: 10s
-#      retries: 3
-    extra_hosts:
-      - "somehost:8.8.8.8"
-    ulimits:
-       nproc: 65535
-       nofile:
-         soft: 20000
-         hard: 40000
-    restart: on-failure
-    command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/user_data_store.yml -p 5000
-
-  core-access-control:
-    build:
-      context: ../core-access-control/
-    volumes:
-      - ../core-access-control:/code
-    expose:
-      - "5000"
-    restart: on-failure
-    command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/access_control.yml -p 5000
-    depends_on:
-      - core-general
-
-  core-management-layer:
-    build:
-      context: ../core-management-layer/
-    volumes:
-      - ../core-management-layer:/code
-    ports:
-      - "8001:8080"
-    depends_on:
-      - core-access-control
-      - core-user-data-store
-      # - core-authentication-service
-    restart: on-failure
-    # For mocking:
-    # command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/management_layer.yml -p 8080
-
-#  core-management-portal:
-#    build:
-#      context: ../core-management-portal/
-#    volumes:
-#      - ../core-management-portal/management_portal:/code
-#    depends_on:
-#      - core-management-layer
-#    restart: on-failure
-#    command: bash -c "while true; do sleep 10; date; done"
-
-  redis:
-    image: "redis:alpine"
-    expose:
-      - "6379"
+    db:
+        build:
+            context: apps/database/
+        environment:
+            - WAGTAILDBS=wagtail_1 wagtail_2
+        # To rather mount localhost postgres data.
+        #volumes:
+        #    - "/var/lib/postgresql/data:/var/lib/postgresql/data"
