--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,3 +66,71 @@ services:
 networks:
     oidcnetwork:
         external: true
+
+  # Moved down for now, to keep ticket related docker data together.
+  core-user-data-store:
+    build:
+      context: ../core-user-data-store/
+      args:  # Maps to args defined in the Dockerfile
+        - password=secret
+        - dbkey  # Get value from the compose environment
+    volumes:
+      - ../core-user-data-store:/code
+    expose:
+        - "5000"
+#    healthcheck:
+#      test: ["CMD", "curl", "-f", "http://localhost:5000"]
+#      interval: 1m30s
+#      timeout: 10s
+#      retries: 3
+    extra_hosts:
+      - "somehost:8.8.8.8"
+    ulimits:
+       nproc: 65535
+       nofile:
+         soft: 20000
+         hard: 40000
+    restart: on-failure
+    command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/user_data_store.yml -p 5000
+
+  core-access-control:
+    build:
+      context: ../core-access-control/
+    volumes:
+      - ../core-access-control:/code
+    expose:
+      - "5000"
+    restart: on-failure
+    command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/access_control.yml -p 5000
+    depends_on:
+      - core-general
+
+  core-management-layer:
+    build:
+      context: ../core-management-layer/
+    volumes:
+      - ../core-management-layer:/code
+    ports:
+      - "8001:8080"
+    depends_on:
+      - core-access-control
+      - core-user-data-store
+      # - core-authentication-service
+    restart: on-failure
+    # For mocking:
+    # command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/management_layer.yml -p 8080
+
+#  core-management-portal:
+#    build:
+#      context: ../core-management-portal/
+#    volumes:
+#      - ../core-management-portal/management_portal:/code
+#    depends_on:
+#      - core-management-layer
+#    restart: on-failure
+#    command: bash -c "while true; do sleep 10; date; done"
+
+  redis:
+    image: "redis:alpine"
+    expose:
+      - "6379"
