--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,83 @@
 version: '3'
 
+# IPs
+# ----------
+# 172.18.0.2  core-access-control
+# 172.18.0.3  core-authentication-service
+# 172.18.0.4  wagtail-demo-1
+# 172.18.0.5  wagtail-demo-2
+# 172.18.0.6  core-management-layer
+# 172.18.0.7  core-management-portal
+# 172.18.0.8  core-user-data-store
+# -----------
+# 172.18.0.10 db
+# 172.18.0.11 redis
+# 172.18.0.12 memcache
+#
+# Local ports
+# -----------
+# 10000 core-access-control
+# 10001 wagtail-demo-1
+# 10002 wagtail-demo-2
+# 10003 core-management-layer
+# 10004 core-management-portal
+
 services:
-#  core-general:
-#    image: girleffect:1.0
-#    build:
-#     context: .
+
+  core-user-data-store:
+    build:
+      context: ../core-user-data-store/
+    environment:
+      - DB_URI=postgresql+psycopg2://user_data_store:password@db:5432/user_data_store
+    volumes:
+      - ../core-user-data-store/:/app/
+#    healthcheck:
+#      test: ["CMD", "curl", "-f", "http://localhost:5000"]
+#      interval: 1m30s
+#      timeout: 10s
+#      retries: 3
+    ulimits:
+       nproc: 65535
+       nofile:
+         soft: 20000
+         hard: 40000
+    restart: on-failure
+    # command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/user_data_store.yml -p 5000
+    command: -m swagger_server
+    depends_on:
+      - db
+    networks:
+      oidcnetwork:
+        ipv4_address: 172.18.0.8
+
+  core-access-control:
+    build:
+      context: ../core-access-control/
+    environment:
+      - DB_URI=postgresql+psycopg2://access_control:password@db:5432/access_control
+    volumes:
+      - ../core-access-control/:/app/
+    restart: on-failure
+    # command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/access_control.yml -p 5000
+    command: -m swagger_server
+    depends_on:
+      - db
+    networks:
+      oidcnetwork:
+        ipv4_address: 172.18.0.2
 
   core-authentication-service:
     image: ge-auth:0.1
     build:
       context: ../core-authentication-service/
     volumes:
-      - ../core-authentication-service:/code
+      - ../core-authentication-service/:/app/
     command: scripts/waitFor.sh scripts/startDjango.sh
     ports:
-      - "8000:8000"
+      - "10000:8000"
     environment:
-      - DB_HOST=172.18.0.2
-      - REDIS_URI=redis://172.18.0.6:6379/0
+      - DB_HOST=db
+      - REDIS_URI=redis://redis:6379/0
       # NOTE: we bootstrap our database container with some dbs.
       - DB_NAME=authentication_service
       - ALLOWED_HOSTS=*
@@ -35,7 +95,7 @@ services:
       context: ../core-integration-demo/
     command: scripts/waitFor.sh scripts/startDjango.sh
     ports:
-      - "8001:8000"
+      - "10001:8000"
     environment:
       # Not current on postgres.
       - DB_HOST=db
@@ -66,7 +126,7 @@ services:
       context: ../core-integration-demo/
     command: scripts/waitFor.sh scripts/startDjango.sh
     ports:
-      - "8002:8000"
+      - "10002:8000"
     environment:
       # Not current on postgres.
       - DB_HOST=db
@@ -91,13 +151,32 @@ services:
       oidcnetwork:
         ipv4_address: 172.18.0.5
 
-  gmp:
+  core-management-layer:
+    build:
+      context: ../core-management-layer/
+    volumes:
+      - ../core-management-layer/:/app/
+    ports:
+      - "10003:5000"
+    depends_on:
+      - core-access-control
+      - core-user-data-store
+      - core-authentication-service
+    restart: on-failure
+    # For mocking:
+    # command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/management_layer.yml -p 8080
+    command: swagger_server/httpd.py --logging=debug
+    networks:
+      oidcnetwork:
+        ipv4_address: 172.18.0.6
+
+  core-management-portal:
     image: ge-gmp:0.1
     build:
       context: ../core-management-portal/
     command: yarn start
     ports:
-      - "8003:3000"
+      - "10004:3000"
     environment:
       - OIDC_RP_CLIENT_ID=client_id_2
       - OIDC_RP_CLIENT_SECRET=super_client_secret_2
@@ -120,70 +199,7 @@ services:
     #    - "/var/lib/postgresql/data:/var/lib/postgresql/data"
     networks:
       oidcnetwork:
-        ipv4_address: 172.18.0.2
-
-#  # Moved down for now, to keep ticket related docker data together.
-#  core-user-data-store:
-#    build:
-#      context: ../core-user-data-store/
-#      args:  # Maps to args defined in the Dockerfile
-#        - password=secret
-#        - dbkey  # Get value from the compose environment
-#    volumes:
-#      - ../core-user-data-store:/code
-#    expose:
-#        - "5000"
-##    healthcheck:
-##      test: ["CMD", "curl", "-f", "http://localhost:5000"]
-##      interval: 1m30s
-##      timeout: 10s
-##      retries: 3
-#    extra_hosts:
-#      - "somehost:8.8.8.8"
-#    ulimits:
-#       nproc: 65535
-#       nofile:
-#         soft: 20000
-#         hard: 40000
-#    restart: on-failure
-#    command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/user_data_store.yml -p 5000
-#
-#  core-access-control:
-#    build:
-#      context: ../core-access-control/
-#    volumes:
-#      - ../core-access-control:/code
-#    expose:
-#      - "5000"
-#    restart: on-failure
-#    command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/access_control.yml -p 5000
-#    depends_on:
-#      - core-general
-#
-#  core-management-layer:
-#    build:
-#      context: ../core-management-layer/
-#    volumes:
-#      - ../core-management-layer:/code
-#    ports:
-#      - "8001:8080"
-#    depends_on:
-#      - core-access-control
-#      - core-user-data-store
-#      # - core-authentication-service
-#    restart: on-failure
-#    # For mocking:
-#    # command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/management_layer.yml -p 8080
-#
-##  core-management-portal:
-##    build:
-##      context: ../core-management-portal/
-##    volumes:
-##      - ../core-management-portal/management_portal:/code
-##    depends_on:
-##      - core-management-layer
-##    restart: on-failure
-##    command: bash -c "while true; do sleep 10; date; done"
+        ipv4_address: 172.18.0.10
 
   redis:
     image: "redis:alpine"
@@ -191,7 +207,13 @@ services:
       - "6379"
     networks:
       oidcnetwork:
-        ipv4_address: 172.18.0.6
+        ipv4_address: 172.18.0.11
+
+  memcache:
+    image: "memcached:alpine"
+    networks:
+      oidcnetwork:
+        ipv4_address: 172.18.0.12
 
 networks:
   oidcnetwork:
