--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
       - DB_USER=wagtail_1
       - DB_PASSWORD=password
       - WAGTAIL_SITE_NAME="Blue Wagtail"
-      - WAGTAIL_SITE_COLOUR=blue
+      - WAGTAIL_SITE_COLOUR=#61c7b4
       - WAGTAIL_REDIRECT_URL=http://${WAGTAIL_DEMO_1_IP}/
       - OIDC_RP_CLIENT_ID=client_id_1
       - OIDC_RP_CLIENT_SECRET=super_client_secret_1
@@ -109,7 +109,7 @@ services:
       - DB_USER=wagtail_2
       - DB_PASSWORD=password
       - WAGTAIL_SITE_NAME="Green Wagtail"
-      - WAGTAIL_SITE_COLOUR=green
+      - WAGTAIL_SITE_COLOUR=#006f24
       - WAGTAIL_REDIRECT_URL=http://${WAGTAIL_DEMO_2_IP}/
       - OIDC_RP_CLIENT_ID=client_id_2
       - OIDC_RP_CLIENT_SECRET=super_client_secret_2
