--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       - DB_PASSWORD=password
       - WAGTAIL_SITE_NAME="Blue Wagtail"
       - WAGTAIL_SITE_COLOUR=blue
-      - WAGTAIL_REDIRECT_URL=http://${WAGTAIL_DEMO_1_IP}/
+      - WAGTAIL_REDIRECT_URL=http://${WAGTAIL_DEMO_1_IP}:8000/
       - OIDC_RP_CLIENT_ID=client_id_1
       - OIDC_RP_CLIENT_SECRET=super_client_secret_1
       - OIDC_OP=http://${AUTHENTICATION_SERVICE_IP}:8000
@@ -110,7 +110,7 @@ services:
       - DB_PASSWORD=password
       - WAGTAIL_SITE_NAME="Green Wagtail"
       - WAGTAIL_SITE_COLOUR=green
-      - WAGTAIL_REDIRECT_URL=http://${WAGTAIL_DEMO_2_IP}/
+      - WAGTAIL_REDIRECT_URL=http://${WAGTAIL_DEMO_2_IP}:8000/
       - OIDC_RP_CLIENT_ID=client_id_2
       - OIDC_RP_CLIENT_SECRET=super_client_secret_2
       - OIDC_OP=http://${AUTHENTICATION_SERVICE_IP}:8000
