Added extra managemenent layer environment variables. Also added squid proxy service.

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ USER_DATA_STORE_IP=172.18.0.8
 POSTGRESQL_IP=172.18.0.10
 REDIS_IP=172.18.0.11
 MEMCACHE_IP=172.18.0.12
+SQUID_IP=172.18.0.13
 
 # Host ports on which services are exposed
 AUTHENTICATION_SERVICE_PORT=10000
@@ -16,3 +17,4 @@ WAGTAIL_DEMO_1_PORT=10001
 WAGTAIL_DEMO_2_PORT=10002
 MANAGEMENT_LAYER_PORT=10003
 MANAGEMENT_PORTAL_PORT=10004
+SQUID_PORT=3128
