--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,6 +135,8 @@ services:
       - ACCESS_CONTROL_API=http://${ACCESS_CONTROL_IP}:8080/api/v1
       - AUTHENTICATION_SERVICE_API=http://${AUTHENTICATION_SERVICE_IP}:8000/api/v1
       - USER_DATA_STORE_API=http://${USER_DATA_STORE_IP}:8080/api/v1
+      - INSECURE=true
+      - WITH_UI=true
     volumes:
       - ../core-management-layer/:/app/
     ports:
@@ -197,6 +199,16 @@ services:
     networks:
       oidcnetwork:
         ipv4_address: ${MEMCACHE_IP}
+
+  squid:
+    image: "datadog/squid"
+    expose:
+      - "3128"
+    ports:
+      - "${SQUID_PORT}:3128"
+    networks:
+      oidcnetwork:
+        ipv4_address: ${SQUID_IP}
 
 networks:
   oidcnetwork:
