Removed all IP addresses and network-related explicit configuration.

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-ACCESS_CONTROL_IP=172.18.0.2
-AUTHENTICATION_SERVICE_IP=172.18.0.3
-WAGTAIL_DEMO_1_IP=172.18.0.4
-WAGTAIL_DEMO_2_IP=172.18.0.5
-MANAGEMENT_LAYER_IP=172.18.0.6
-MANAGEMENT_PORTAL_IP=172.18.0.7
-USER_DATA_STORE_IP=172.18.0.8
+ACCESS_CONTROL_IP=core-access-control
+AUTHENTICATION_SERVICE_IP=core-authentication-service
+WAGTAIL_DEMO_1_IP=wagtail-demo-1
+WAGTAIL_DEMO_2_IP=wagtail-demo-2
+MANAGEMENT_LAYER_IP=core-management-layer
+MANAGEMENT_PORTAL_IP=core-management-portal
+USER_DATA_STORE_IP=core-user-data-store
 
-POSTGRESQL_IP=172.18.0.10
-REDIS_IP=172.18.0.11
-MEMCACHE_IP=172.18.0.12
-SQUID_IP=172.18.0.13
+POSTGRESQL_IP=db
+REDIS_IP=redis
+MEMCACHE_IP=memcache
+SQUID_IP=squid
 
 # Host ports on which services are exposed
 AUTHENTICATION_SERVICE_PORT=10000
