pacserver for Mac proxy configuration

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ POSTGRESQL_IP=172.18.0.10
 REDIS_IP=172.18.0.11
 MEMCACHE_IP=172.18.0.12
 SQUID_IP=172.18.0.13
+PACSERVER_IP=172.18.0.14
 
 # Host ports on which services are exposed
 AUTHENTICATION_SERVICE_PORT=10000
@@ -18,3 +19,4 @@ WAGTAIL_DEMO_2_PORT=10002
 MANAGEMENT_LAYER_PORT=10003
 MANAGEMENT_PORTAL_PORT=10004
 SQUID_PORT=3128
+PACSERVER_PORT=3129
