--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - ../core-access-control/:/app/
     restart: on-failure
     # command: /code/prism run --validate --debug --list --mockDynamic -s /code/swagger/access_control.yml -p 5000
-    command: -m swagger_server
+    command: scripts/startApp.sh
     depends_on:
       - db
 
