--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,8 +65,8 @@ services:
       - DB_NAME=wagtail_1
       - DB_USER=wagtail_1
       - DB_PASSWORD=password
-      - WAGTAIL_SITE_NAME="Blue Wagtail"
-      - WAGTAIL_SITE_COLOUR=blue
+      - WAGTAIL_SITE_NAME="Springster"
+      - SITE_CODE=springster
       - WAGTAIL_REDIRECT_URL=http://wagtail-demo-1:8000/
       - OIDC_RP_CLIENT_ID=client_id_1
       - OIDC_RP_CLIENT_SECRET=super_client_secret_1
@@ -91,8 +91,8 @@ services:
       - DB_NAME=wagtail_2
       - DB_USER=wagtail_2
       - DB_PASSWORD=password
-      - WAGTAIL_SITE_NAME="Green Wagtail"
-      - WAGTAIL_SITE_COLOUR=green
+      - WAGTAIL_SITE_NAME="Ninyampinga"
+      - SITE_CODE=ninyampinga
       - WAGTAIL_REDIRECT_URL=http://wagtail-demo-2:8000/
       - OIDC_RP_CLIENT_ID=client_id_2
       - OIDC_RP_CLIENT_SECRET=super_client_secret_2
